--- a/courses/templates/courses/manage/course/list.html
+++ b/courses/templates/courses/manage/course/list.html
@@ -1,22 +1,27 @@
 
 {% extends "base.html" %}
+{% load crispy_forms_field %}
 {% block title %}My courses{% endblock %}
 {% block content %}
-<h1>My courses</h1>
-<div class="module">
+<h1 style="margin-left:400px;">My courses</h1>
+<div class="course-module">
 {% for course in object_list %}
 <div class="course-info">
 <h3>{{ course.title }}</h3>
 <p>
-<a href="{% url "course_edit" course.id %}" class="left" >Edit</a>
-<a href="{% url "course_delete" course.id %}" class="right" >Delete</a>
+<a href="{% url "course_edit" course.id %}" class="left" >Edit Course</a>
+<a href="{% url "course_delete" course.id %}" class="right" >Delete Course</a><br>
+<a href="{% url "course_module_update" course.id %}" style="display:block;margin-top:30px;"  class="module-left">Edit modules</a>
+{% if course.modules.count > 0 %}
+<a href="{% url "module_content_list" course.modules.first.id %}"  class="content-right">Manage contents</a>
+{% endif %}
 </p>
 </div>
 {% empty %}
 <p>You haven't created any courses yet.</p>
 {% endfor %}
 <p>
-<a href="{% url "course_create" %}" class="button">Create new
+<a href="{% url "course_create" %}" class="btn btn-primary btn-block">Create new
 course</a>
 </p>
 </div>
