--- a/courses/templates/base.html
+++ b/courses/templates/base.html
@@ -22,7 +22,8 @@
 {% block content %}
 {% endblock %}
 </div>
-<script type="text/javascript" src="{{ STATIC_URL }} /static/jquery-3.3.1.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 <script>
 $(document).ready(function() {
 {% block domready %}
